vector/test
In file included from relational_operators_main.cpp:1:
./vector.hpp:516:41: error: expected ')'
                        while (lhs_it != lhs.end() && rhs_it !- rhs.end())
                                                             ^
./vector.hpp:516:10: note: to match this '('
                        while (lhs_it != lhs.end() && rhs_it !- rhs.end())
                              ^
./vector.hpp:516:34: error: value of type 'typename ft::vector<int>::const_iterator' (aka '__normal_iterator<const int *, std::vector<int>>') is not contextually convertible to 'bool'
                        while (lhs_it != lhs.end() && rhs_it !- rhs.end())
                                                      ^~~~~~
relational_operators_main.cpp:13:10: note: in instantiation of function template specialization 'ft::operator==<int, std::allocator<int>>' requested here
        if (foo == bar ) std::cout << "foo == bar" << std::endl;
                ^
In file included from relational_operators_main.cpp:1:
./vector.hpp:516:31: error: invalid operands to binary expression ('bool' and 'typename ft::vector<int>::const_iterator' (aka '__normal_iterator<const int *, std::vector<int>>'))
                        while (lhs_it != lhs.end() && rhs_it !- rhs.end())
                               ~~~~~~~~~~~~~~~~~~~ ^  ~~~~~~
./vector.hpp:548:18: error: invalid operands to binary expression ('const vector<int>' and 'const vector<int>')
                        return (!(lhs == rhs));
                                  ~~~ ^  ~~~
relational_operators_main.cpp:14:10: note: in instantiation of function template specialization 'ft::operator!=<int, std::allocator<int>>' requested here
        if (foo != bar ) std::cout << "foo != bar" << std::endl;
                ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/allocator.h:192:7: note: candidate function not viable: no known conversion from 'const vector<int>' to 'const std::allocator<int>' for 1st argument
      operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/system_error:342:3: note: candidate function not viable: no known conversion from 'const vector<int>' to 'const std::error_code' for 1st argument
  operator==(const error_code& __lhs, const error_code& __rhs) noexcept
  ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/system_error:349:3: note: candidate function not viable: no known conversion from 'const vector<int>' to 'const std::error_code' for 1st argument
  operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
  ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/system_error:357:3: note: candidate function not viable: no known conversion from 'const vector<int>' to 'const std::error_condition' for 1st argument
  operator==(const error_condition& __lhs,
  ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/system_error:390:3: note: candidate function not viable: no known conversion from 'const vector<int>' to 'const std::error_condition' for 1st argument
  operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
  ^
./vector.hpp:511:8: note: candidate template ignored: substitution failure [with T = int, Alloc = std::allocator<int>]
                bool    operator==(const vector<T, Alloc>& lhs, const vector <T, Alloc>& rhs)
                        ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/postypes.h:222:5: note: candidate template ignored: could not match 'fpos' against 'vector'
    operator==(const fpos<_StateT>& __lhs, const fpos<_StateT>& __rhs)
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_pair.h:466:5: note: candidate template ignored: could not match 'pair' against 'vector'
    operator==(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_iterator.h:385:5: note: candidate template ignored: could not match 'reverse_iterator' against 'vector'
    operator==(const reverse_iterator<_Iterator>& __x,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_iterator.h:423:5: note: candidate template ignored: could not match 'reverse_iterator' against 'vector'
    operator==(const reverse_iterator<_IteratorL>& __x,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_iterator.h:1086:5: note: candidate template ignored: could not match '__normal_iterator' against 'vector'
    operator==(const __normal_iterator<_IteratorL, _Container>& __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_iterator.h:1094:5: note: candidate template ignored: could not match '__normal_iterator' against 'vector'
    operator==(const __normal_iterator<_Iterator, _Container>& __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_iterator.h:1465:5: note: candidate template ignored: could not match 'move_iterator' against 'vector'
    operator==(const move_iterator<_IteratorL>& __x,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_iterator.h:1533:5: note: candidate template ignored: could not match 'move_iterator' against 'vector'
    operator==(const move_iterator<_Iterator>& __x,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/ext/new_allocator.h:171:2: note: candidate template ignored: could not match 'new_allocator' against 'vector'
        operator==(const new_allocator&, const new_allocator<_Up>&)
        ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/allocator.h:206:5: note: candidate template ignored: could not match 'allocator' against 'vector'
    operator==(const allocator<_T1>&, const allocator<_T2>&)
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/basic_string.h:6163:5: note: candidate template ignored: could not match 'basic_string' against 'vector'
    operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/basic_string.h:6171:5: note: candidate template ignored: could not match 'basic_string' against 'vector'
    operator==(const basic_string<_CharT>& __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/basic_string.h:6185:5: note: candidate template ignored: could not match 'basic_string' against 'vector'
    operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/basic_string.h:6226:5: note: candidate template ignored: could not match 'const _CharT *' against 'vector<int>'
    operator==(const _CharT* __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/streambuf_iterator.h:227:5: note: candidate template ignored: could not match 'istreambuf_iterator' against 'vector'
    operator==(const istreambuf_iterator<_CharT, _Traits>& __a,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_vector.h:1892:5: note: candidate template ignored: could not match 'std::vector' against 'ft::vector'
    operator==(const vector<_Tp, _Alloc>& __x, const vector<_Tp, _Alloc>& __y)
    ^
4 errors generated.
